--- a/inc/style.css
+++ b/inc/style.css
@@ -1051,17 +1051,18 @@ body {
 
 #main-footer {
   background-color: rgba(255, 255, 255, 0.97);
+  border-top: 1px solid #e9e9e9;
 }
 
 #checkedList > div:nth-child(even),
-#unchekedList > div:nth-child(even),
+#uncheckedList > div:nth-child(even),
 #tagsUList > div:nth-child(even),
 #tagsCList > div:nth-child(even) {
   background-color: #fcfcfc;
 }
 
 #checkedList > div:nth-child(odd),
-#unchekedList > div:nth-child(odd),
+#uncheckedList > div:nth-child(odd),
 #tagsUList > div:nth-child(odd),
 #tagsCList > div:nth-child(odd) {
   background-color: #f7f7f7;
